<resources>
    <string name="app_name">SendBusinessCard</string>
    <string name="create_account">Create Account</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="change_password_verification">Change Password Verification</string>
    <string name="next">Next</string>
    <string name="Change_Password">Change Password?</string>
    <string name="Change_Password_btn">Change Password</string>
    <string name="verification">Verification</string>
    <string name="enter_verification">Enter the verification code we just\nsent you on your email address</string>
    <string name="verify">Verify</string>
    <string name="send">Send</string>
    <string name="send_mail_again">Dont receive the mail in 2 minutes?\nsend again</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_successful">Password Reset successfully</string>
    <string name="card">Card</string>
    <string name="designation">Designation</string>
    <string name="sign_in">Sign In</string>
    <string name="tv_back">Back</string>
    <string name="select">Select</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_new_password_verfication">Change Password Verification</string>
    <string name="create_new_password">Create New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_subtitle">Enter the email address associated\nwith your account</string>
    <string name="enterEmail">Enter your email address associated with your account</string>
    <string name="verification_code_on_email">We sent you OTP on your\nregistered Email ID</string>
    <string name="Submit">Submit</string>
    <string name="feedback_title">Help us improve</string>
    <string name="enter_emailIDor_contct">Enter Email ID or Contact no.</string>
    <string name="enter_emailID">Enter Email ID</string>
    <string name="enter_feedback">Please enter feedback</string>
    <string name="no_contacts">No contacts found</string>
    <string name="select_terms">Please select terms and Privacy policy</string>
    <string name="enter_otp">Enter 5 Digit OTP</string>
    <string name="enter_otp6">Enter 6 Digit OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="feedback_hint">Describe your thought or suggestion</string>
    <string name="send_otp_text">We ve sent you OTP on your \nregistered Email ID</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="password_reset_successfully">Your password has been reset successfully</string>
    <string name="new_password_hint">Your new password must be different from previous used password.</string>
    <string name="dont_have_account">Don\'t have an account? Create New Account</string>
    <string name="how_can_we_improve">How can we improve?</string>
    <string name="experience">How was your \n experience with us?</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_again">send again</string>
    <string name="later">Maybe Later</string>
    <string name="shareApp">Happy to Share App</string>
    <string name="improve">Help us to improve</string>
    <string name="dont_receive">Don\'t receive the OTP? RESEND OTP</string>
    <string name="dont_receive_email">Dont receive mail in 2 minutes </string>
    <string name="thank_you">Thank you for sharing your thoughts. We appreciates your feedback!</string>
    <string name="accept_tnc">By creating an account you agree to our \n
Terms of Service and Privacy Policy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_verify_otp">Verify OTP</string>
    <string name="menu_my_Register">Create Account</string>
    <string name="menu_my_login">Login</string>
    <string name="upload_company_logo">Upload company logo</string>
    <string name="menu_saved_cards">Saved Cards</string>
    <string name="menu_contact_list">Contact List</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_select_theme">Select Theme</string>
    <string name="menu_home">Home</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_our_services">Our Services</string>


    <string name="enter_your">Enter Your</string>
    <string name="social_media_links">Social Media Links</string>
    <string name="enter_username">Enter Username</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="success_title">Success</string>
    <string name="success_title_sub">OTP verified Successfully</string>
    <string name="success_title_feedback">Thank You\nYour Feedback send Successfully</string>
    <string name="success_title_logout">Logout Successfully</string>
    <string name="success_title_card_delete">Card deleted Successfully</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="card_saved_successfully">Card Saved Successfully</string>
    <string name="update_profile_successfully">Profile updated Successfully</string>
    <string name="success_title_change_password">Password changed Successfully</string>
    <string name="success_title_new_password">New Password created Successfully</string>
    <string name="resentOtp">Dont receive the OTP? RESEND OTP</string>

    <!-- Home -->
    <string name="enter_name">Enter Name</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_website">Enter Website</string>
    <string name="enter_location">Enter Location</string>
    <string name="our_services">Our Services</string>
    <string name="company_logo">Select Company Logo</string>
    <string name="create_your">Create Your</string>
    <string name="digital_card">Digital Card</string>
    <string name="enter_company_name">Enter Company Name</string>
    

    <string name="no_confirmation">No</string>
    <string name="ok_confirmation">OK</string>
    <string name="yes_confirmation">Yes</string>
    <string name="error">Error</string>
    <string name="logged_out">You\'ve been logged out due to inactivity. Please log in again.</string>

    <!-- Theme -->
    <string name="select_your_theme">Select Your Theme</string>

    <!-- Our Services -->
    <string name="enter">Enter</string>
    <string name="your_services">Your Services</string>
    <string name="add_services">Add Services</string>
    <string name="add_service_name">Add Service Name</string>
    <string name="documents">Documents</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="text_go_out_of_chat_title">Confirm Exit</string>
    <string name="text_going_out_of_chat_alert">Do you want to exit without attaching\nthe selected file?</string>
    <string name="tex_exit">Exit</string>
    <string name="tex_cancel">Cancel</string>
    <string name="permission_denied_alert">Permission denied</string>
    <string name="permission_denied_description">You won’t be able to use the upload\nand download functions.Please grant\npermission to enable them.</string>
    <string name="permission_needed_alert">Permission needed</string>
    <string name="permission_needed_description">In the following screen, grant\npermission to access photos, media\nand files on this device.</string>
    <string name="mandatory_permission_need_alert">Allow access to photos, media, and\nfiles on your device</string>
    <string name="mandatory_permission_need_description">Since access was denied, you’ll need\nto grant access manually.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intro Screen -->
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>


</resources>