<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_saved_cards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_saved_cards" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_select_theme"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_select_theme" />
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_share_app" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>