<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sendbizcard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.sendbizcard.ui.profile.ProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_saved_cards"
        android:name="com.sendbizcard.ui.gallery.GalleryFragment"
        android:label="@string/menu_saved_cards"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.sendbizcard.ui.feedback.FeedbackThankYouFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback_thank_you" />

    <fragment
        android:id="@+id/nav_select_theme"
        android:name="com.sendbizcard.ui.theme.ThemeFragment"
        android:label="@string/menu_select_theme"
        tools:layout="@layout/fragment_theme" />


    <fragment
        android:id="@+id/nav_our_services"
        android:name="com.sendbizcard.ui.ourServices.OurServicesFragment"
        android:label="@string/menu_our_services"
        tools:layout="@layout/fragment_our_services" />

    <fragment
        android:id="@+id/nav_card_share"
        android:name="com.sendbizcard.ui.sharecard.ViewCardFragment"
        android:label="@string/menu_our_services"
        tools:layout="@layout/fragment_view_card" />

    <fragment
        android:id="@+id/nav_social_media_links"
        android:name="com.sendbizcard.ui.socialMediaLinks.SocialMediaLinksFragment"
        android:label="@string/social_media_links"
        tools:layout="@layout/fragment_enter_social_media_links" />

</navigation>