<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Splash">

    <fragment
        android:id="@+id/nav_Splash"
        android:name="com.sendbizcard.ui.splash.SplashFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow">

        <action
            android:id="@+id/actionSplashToLoginFragment"
            app:destination="@id/nav_login"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/actionSplashToSignUpFragment"
            app:destination="@id/nav_Singup"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.sendbizcard.ui.SiginFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Singup"
        android:name="com.sendbizcard.ui.register.SignUpFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.sendbizcard.ui.home.HomeFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved_cards"
        android:name="com.sendbizcard.ui.gallery.GalleryFragment"
        android:label="@string/menu_saved_cards"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.sendbizcard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_select_theme"
        android:name="com.sendbizcard.ui.home.HomeFragment"
        android:label="@string/menu_select_theme"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share_app"
        android:name="com.sendbizcard.ui.gallery.GalleryFragment"
        android:label="@string/menu_share_app"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.sendbizcard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />


</navigation>