<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/enter_pin"
        android:gravity="center"
        style="@style/gilroy_bold_18"
        android:layout_marginTop="63dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tvTitleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_account"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_otp"
        />



    <com.chaos.view.PinView
        android:id="@+id/otpPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textSize="16sp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="56dp"
        app:itemRadius="5dp"
        app:itemSpacing="8dp"
        app:itemWidth="56dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lineColor="#d5d5d5"
        app:lineWidth="2dp"
        app:viewType="rectangle" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/otpPinView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/resentOtp"
        android:gravity="center"
        style="@style/gilroy_regular_13"
        android:layout_marginTop="34dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send_again"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verification_code_on_email"
        android:gravity="center"
        style="@style/gilroy_regular_13"
        android:layout_margin="30dp"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnverify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cbprivacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:paddingLeft="65sp"
        android:paddingRight="65sp"
        style="@style/gilroy_regular_16"
        android:textColor="@color/white"
        android:background="@drawable/button_rectangle"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbprivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/accept_tnc"
        app:layout_constraintTop_toBottomOf="@+id/tvSendOtp"/>

    <RelativeLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
