<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:gravity="center"
        style="@style/gilroy_bold_23"
        android:text="@string/feedback_title"
        android:textColor="@color/textcolour"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFeedBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle"
        android:gravity="top|start"
        android:padding="10dp"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        style="@style/gilroy_regular_13"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyAccount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFeedbackError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/enter_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFeedBack"
        android:layout_marginStart="30dp"
        android:textColor="@color/red"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_rectangle"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:paddingLeft="65sp"
        android:paddingRight="65sp"
        android:textColor="@color/white"
        style="@style/gilroy_regular_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeedbackError" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:gravity="start"
        style="@style/gilroy_semibold_14"
        android:text="@string/how_can_we_improve"
        android:textColor="@color/textcolour"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="How can we improve?" />

    <RelativeLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
